# pyramid_mako

./: .coveragerc  .gitignore  .travis.yml  CHANGES.txt  CONTRIBUTORS.txt  COPYRIGHT.txt  MANIFEST.in  README.rst  README.txt  appveyor.yml  pyproject.toml  rtd.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-tests.yml
docs/: api.rst  conf.py  glossary.rst  index.rst
pyramid_mako/: __init__.py  compat.py  tests.py
pyramid_mako/debugtoolbar/panels/: main.py
pyramid_mako/debugtoolbar/panels/templates/: main.dbtmako
pyramid_mako/fixtures/: hellocompo.mak  static_url.mako
pyramid_mako/tests/: test_mako_templating.py
src/pyramid_mako/: __init__.py  compat.py
src/pyramid_mako/fixtures/: hello_inherit_pkg.mak
tests/: __init__.py  test_it.py
tests/fixtures/: hello .world.mako  hello_inherit_pkg.mak  hellocompo.mak
