[metadata]
name = pyramid_mako
version = 1.1.0
description = Mako template bindings for the Pyramid web framework
long_description = file: README.rst, CHANGES.txt
long_description_content_type = text/x-rst
keywords = web wsgi pyramid
license = BSD-derived (Repoze)
classifiers =
        Development Status :: 6 - Mature,
        Intended Audience :: Developers,
        Programming Language :: Python,
        Programming Language :: Python :: 3,
        Programming Language :: Python :: 3.7,
        Programming Language :: Python :: 3.8,
        Programming Language :: Python :: 3.9,
        Programming Language :: Python :: 3.10,
        Framework :: Pyramid,
        License :: Repoze Public License,
url = https://github.com/Pylons/pyramid_mako
project_urls =
    Documentation = https://docs.pylonsproject.org/projects/pyramid_mako/en/latest/
    Changelog = https://github.com/Pylons/pyramid_mako/blob/master/CHANGES.txt
    Issue Tracker = https://github.com/Pylons/pyramid_mako/issues

author = Bert JW Regeer
author_email = pylons-discuss@googlegroups.com
maintainer = Pylons Project
maintainer_email = pylons-discuss@googlegroups.com

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7.0
install_requires =
    Mako>=1.1.0
    pyramid

[options.packages.find]
where=src

[options.extras_require]
testing =
    WebTest >= 1.3.1
    coverage>=5.0
    pytest
    pytest-cover

docs =
    Sphinx>=1.8.1
    docutils
    pylons-sphinx-themes>=1.0.9
    repoze.sphinx.autointerface

[tool:pytest]
python_files = test_*.py
testpaths =
    tests
addopts = --cov -W always
